# session-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.ko.md  README.md  TODO.md  deploy-session-dashboard.skill  page_content.txt
.omc/: GOVERNANCE.md
.omc/knowledge/: known-failures.md
.omc/plans/: dspy-summary-sidecar.md  hook-event-sse-push.md  pin-sessions.md
.omc/scripts/: drift-check.sh
.omc/spec/: prd-dspy-summary.md  prd.md  status.md
.omc/workflows/: auto-live-test.md  deploy-dashboard.md  frontend-perf-audit.md  status-transition-regression.md
.sisyphus/: boulder.json
.sisyphus/drafts/: dashboard-search.md  enrichment-pipeline-optimization.md  session-fork-rename-tracking.md  timeline-restore.md
.sisyphus/evidence/: f1-smoke-test.txt  f2-playwright-results.txt  task-1-diagnosis-summary.md  task-1-docker-connectivity.txt  task-1-dry-run-both.txt  task-1-dry-run-empty.txt  (+63 more)
agent/: .env.example  .gitignore  README.md  package-lock.json  package.json
agent/python/: .gitignore  pyproject.toml
agent/python/src/: cli.py  db.py  engine.py  main.py  signatures.py
docs/: architecture.md  regression-test-inventory.md  regression-test-plan.md  socat-forwarding.md
install/: agent.sh  install.sh  oc-serve.sh  server.sh
scripts/: oc-attach.sh
server/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  machines.yml.example  package-lock.json  package.json  playwright.claude-regression.config.ts  playwright.config.ts  playwright.opencode-regression.config.ts  vitest.config.ts
study/: session-dashboard
tui/: package.json  tsconfig.json
(+261 files in other folders)
