[project]
name = "session-summary-service"
version = "0.1.0"
description = "DSPy-powered progressive session summary sidecar"
requires-python = ">=3.11"
dependencies = [
  "dspy>=2.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
